--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- nomalize all browsers  -->
     <link rel="stylesheet" href="./css/normalize.css" />
     <!-- main tamplate css  -->
-    <link rel="stylesheet" href="../css/template3.css" />
+    <link rel="stylesheet" href="./css/template3.css" />
     <!-- google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
